--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=h1, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #contianer{
+            display:flex;
+            font-size: 25px;
+            color:white;
+            background-color: black;
+        }
+    </style>
 </head>
 <body>
     <h1>Body of project</h1>
+    <div id="container">
+        <div>home</div>
+        <div>help</div>
+        <div>about</div>
+        <div>FAQ</div>
+    </div>
 </body>
 </html>
