boys page added

--- a/mens.html
+++ b/mens.html
@@ -52,7 +52,7 @@
         </div>
     </div>
     <div class="offer-div">
-        <p>Buy 1 get 2nd at Rs199 + Free shipping on ALL orders</p>
+        <p>Buy 1 get 2nd at Rs199 + Flat 200 Off on Rs1999. Code: MAX200</p>
     </div>
      
     <div class="moving-img">
