--- a/Girls.html
+++ b/Girls.html
@@ -37,22 +37,19 @@
             </div>
         </div>
         <div class="nav-subcat">
+            <div>Baby Girl(0-2 Yrs)</div>
             <div>Tops</div>
             <div>Bottoms</div>
-            <div>Sportswear</div>
-            <div>Loungewear</div>
-            <div>Innerwear</div>
-            <div>Indian Wear</div>
+            <div>Essentials</div>
             <div>Accessories</div>
             <div>Footwear</div>
+            <div>Indian Wear</div>
             <div>Winterwear</div>
-            <div>Sports Leisure</div>
-            <div>The Shirt Shop</div>
             <div>More</div>
         </div>
     </div>
     <div class="offer-div">
-        <p>Buy 1 get 2nd at Rs199 + Free shipping on ALL orders</p>
+        <p>Buy 1 get 2nd at Rs99 + Free shipping on ALL orders</p>
     </div>
      
     <div class="moving-img">
@@ -102,7 +99,7 @@
             </div>
             <div>
                 <img src="https://lmsin.net/cdn-cgi/image/w=288,q=60,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedAD8AF927.lmsin.net/MAX-Friday/MAX2.O/PC-B-6-Desktop-Girls-09MAR2022.jpg" alt="">
-                <p class="cat-p">Add Ons</p>
+                <p class="cat-p">Add-ons</p>
             </div>
         </div>
     </div>
