--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="landingPageStyles.css">
 </head>
 <body>
-    <div id="container">
+    <!-- <div id="container">
         <div class="top-content1">
             <div>Free Shipping</div>
             <div>Return to Store</div>
@@ -61,7 +61,7 @@
     </div>
     <div class="img2">
         <img src="https://lmsin.net/cdn-cgi/image/w=1232,q=60,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedAD8AF927.lmsin.net/MAX-Friday/MAX2.O/department-modularblock-oneBythree-C-Common-28Mar2022.jpg" alt="">   
-    </div>
+    </div> -->
     <div class="shopping-list">
         <p>Shop By Category</p>
         <div class="categories">
@@ -129,31 +129,31 @@
             </div>
         </div>
     </div>
-    <div class="dress-shop shopping-list">
+    <div class="shopping-list">
         <p>Dress Shop</p>
         <div class="dress-img">
             <img src="https://lmsin.net/cdn-cgi/image/w=1232,q=60,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedAD8AF927.lmsin.net/MAX-Friday/MAX2.O/desktop-modularblock13One-Women-10MARCH2022A.jpg" alt="">
         </div>
     </div>
-    <div class="Must-have shopping-list">
+    <div class="shopping-list">
         <p>Must Haves</p>
         <div class="must-img">
             <img src="https://lmsin.net/cdn-cgi/image/w=1232,q=60,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedAD8AF927.lmsin.net/MAX-Friday/MAX2.O/desktop-modularblock16One-Women-08MAR2022.jpg" alt="">
         </div>
     </div>
-    <div class="youth-store shopping-list">
+    <div class="shopping-list">
         <p>Youth Store</p>
         <div class="must-img">
             <img src="https://lmsin.net/cdn-cgi/image/w=1232,q=60,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedAD8AF927.lmsin.net/MAX-Friday/MAX2.O/desktop-department-5modularblock-oneBytwo1C-Women-08MARNEW20222.jpg" alt="">
         </div>
     </div>
-    <div class="popular shopping-list">
+    <div class="shopping-list">
         <p>Popular Now</p>
         <div class="must-img">
             <img src="https://lmsin.net/cdn-cgi/image/w=1232,q=60,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedAD8AF927.lmsin.net/MAX-Friday/MAX2.O/desktop-department-9modularblock-oneBythree-A-Women-08MAR122022.jpg" alt="">
         </div>
     </div>
-    <div class="you-like shopping-list">
+    <div class="shopping-list">
         <p>You May Also Like</p>
         <div id="double-img">
             <div>
