added common data JS file

--- a/boystees.html
+++ b/boystees.html
@@ -26,3 +26,12 @@
 
 
 <script src="./product_list.js"></script>
+
+<script src="./AllData.js"></script>
+
+
+<script>
+
+displayData(boys_Tees);
+
+</script>
