--- a/mensTshirt.html
+++ b/mensTshirt.html
@@ -26,3 +26,11 @@
 
 
 <script src="./product_list.js"></script>
+
+<script src="./AllData.js"></script>
+
+<script>
+
+displayData(mensTshirt);
+
+</script>
