added girls product pages

--- a/girls_essentials.html
+++ b/girls_essentials.html
@@ -23,12 +23,15 @@
 </body>
 
 </html>
+
+
 <script src="./product_list.js"></script>
 
 <script src="./AllData.js"></script>
 
+
 <script>
 
-displayData(boys_essentials);
+displayData(girls_essentials);
 
 </script>
