--- a/girls_indian.html
+++ b/girls_indian.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Essentials</title>
+    <title>IndianWear</title>
 
     <script
       src="https://kit.fontawesome.com/24c494a6b6.js"
@@ -23,12 +23,15 @@
 </body>
 
 </html>
+
+
 <script src="./product_list.js"></script>
 
 <script src="./AllData.js"></script>
 
+
 <script>
 
-displayData(boys_essentials);
+displayData(girls_indian);
 
 </script>
