added basket file

--- a/boys_addon.html
+++ b/boys_addon.html
@@ -23,9 +23,9 @@
 </body>
 
 </html>
-<script src="./product_list.js"></script>
+<script src="product_list.js"></script>
 
-<script src="./AllData.js"></script>
+<script src="AllData.js"></script>
 
 <script>
 
