added Seperate folders

--- a/Boys Section/boys_essentials.html
+++ b/Boys Section/boys_essentials.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shirts</title>
+    <title>Essentials</title>
 
     <script
       src="https://kit.fontawesome.com/24c494a6b6.js"
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="product_list.css">
+    <link rel="stylesheet" href="../product_list.css">
     
 
 </head>
@@ -23,12 +23,12 @@
 </body>
 
 </html>
-<script src="./product_list.js"></script>
+<script src="../product_list.js"></script>
 
-<script src="./AllData.js"></script>
+<script src="../AllData.js"></script>
 
 <script>
 
-displayData(boys_shirts);
+displayData(boys_essentials);
 
 </script>
