--- a/Girls Section/girls_addon.html
+++ b/Girls Section/girls_addon.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="product_list.css">
+    <link rel="stylesheet" href="../product_list.css">
     
 
 </head>
@@ -23,12 +23,15 @@
 </body>
 
 </html>
-<script src="product_list.js"></script>
 
-<script src="AllData.js"></script>
+
+<script src="../product_list.js"></script>
+
+<script src="../AllData.js"></script>
+
 
 <script>
 
-displayData(boys_addon);
+displayData(girls_addon);
 
 </script>
