--- a/Girls Section/girls_dress.html
+++ b/Girls Section/girls_dress.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tees</title>
+    <title>Dresses</title>
 
     <script
       src="https://kit.fontawesome.com/24c494a6b6.js"
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="product_list.css">
+    <link rel="stylesheet" href="../product_list.css">
     
 
 </head>
@@ -25,13 +25,13 @@
 </html>
 
 
-<script src="./product_list.js"></script>
+<script src="../product_list.js"></script>
 
-<script src="./AllData.js"></script>
+<script src="../AllData.js"></script>
 
 
 <script>
 
-displayData(girls_tees);
+displayData(girls_dress);
 
 </script>
