footer final design

--- a/footer.html
+++ b/footer.html
@@ -24,7 +24,7 @@
 
         .box {
             display: flex;
-            margin-left: 135px;
+            margin-left: 9%;
             margin-bottom: 25px;
             margin-top: 35px;
         }
@@ -62,9 +62,10 @@
         }
 
         #contact {
-            display: flex;
-            width:63%;
-            margin-left:140px;
+            display:grid;
+            grid-template-columns: repeat(3,1fr);
+            width:55%;
+            margin-left:9%;
             justify-content: space-between;
         }
 
@@ -99,7 +100,9 @@
 
         #contact1 {
             display: flex;
-            justify-content: space-between;
+            justify-content: right;
+            margin-top: -4%;
+            margin-right: 10%;
         }
 
         #contact1>div {
@@ -120,7 +123,7 @@
 
         #bottom {
             display: flex;
-            margin-left:88px;
+            margin-left:6%;
         }
 
         #font>p {
@@ -180,7 +183,7 @@
             display: flex;
             justify-content: space-between;
             width:70%;
-            margin-left: 128px;
+            margin-left: 9%;
             margin-top: 30px;
             margin-bottom: 50px;
         }
@@ -338,14 +341,14 @@
             </div>
         </div>
 
-        <div id="contact1">
-            <div><i class="fa-brands fa-facebook-f" id="size"></i></div>
-            <div><i class="fa-brands fa-twitter" id="size"></i></div>
-            <div><i class="fa-brands fa-instagram" id="size"></i></div>
-        </div>
-
     </div>
 
+    <div id="contact1">
+        <div><i class="fa-brands fa-facebook-f" id="size"></i></div>
+        <div><i class="fa-brands fa-twitter" id="size"></i></div>
+        <div><i class="fa-brands fa-instagram" id="size"></i></div>
+    </div>
+    <br>
     <hr id="name">
     <div id="bottom">
         <div id="mar">
