repush data management

--- a/All Home Pages/boys.html
+++ b/All Home Pages/boys.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=h1, initial-scale=1.0">
     <title>Boys</title>
-    <link rel="stylesheet" href="landingPageStyles.css">
+    <link rel="stylesheet" href="../landingPageStyles.css">
     <link rel="stylesheet" href="moving-img.css">
 </head>
 <body>
