footer added in all pages

--- a/Boys Section/boys_shirts.html
+++ b/Boys Section/boys_shirts.html
@@ -12,6 +12,7 @@
     ></script>
 
     <link rel="stylesheet" href="../product_list.css">
+    <link rel="stylesheet" href="../footer.css">
     
 
 </head>
@@ -19,6 +20,8 @@
 <body>
     
     <div id="product_list"></div>
+
+    <div id="Footer"></div>
 
 </body>
 
@@ -32,3 +35,6 @@
 displayData(boys_shirts);
 
 </script>
+
+
+<script src="../footer.js"></script>
