--- a/Girls Section/girls_essentials.html
+++ b/Girls Section/girls_essentials.html
@@ -12,6 +12,8 @@
     ></script>
 
     <link rel="stylesheet" href="../product_list.css">
+    <link rel="stylesheet" href="../footer.css">
+
     
 
 </head>
@@ -19,6 +21,8 @@
 <body>
     
     <div id="product_list"></div>
+
+    <div id="Footer"></div>
 
 </body>
 
@@ -35,3 +39,5 @@
 displayData(girls_essentials);
 
 </script>
+
+<script src="../footer.js"></script>
