--- a/Girls Section/girls_indian.html
+++ b/Girls Section/girls_indian.html
@@ -12,6 +12,7 @@
     ></script>
 
     <link rel="stylesheet" href="../product_list.css">
+    <link rel="stylesheet" href="../footer.css">
     
 
 </head>
@@ -19,6 +20,8 @@
 <body>
     
     <div id="product_list"></div>
+
+    <div id="Footer"></div>
 
 </body>
 
@@ -35,3 +38,5 @@
 displayData(girls_indian);
 
 </script>
+
+<script src="../footer.js"></script>
