--- a/Girls Section/girls_tees.html
+++ b/Girls Section/girls_tees.html
@@ -12,13 +12,15 @@
     ></script>
 
     <link rel="stylesheet" href="../product_list.css">
-    
+    <link rel="stylesheet" href="../footer.css">
 
 </head>
 
 <body>
     
     <div id="product_list"></div>
+
+    <div id="Footer"></div>
 
 </body>
 
@@ -35,3 +37,5 @@
 displayData(girls_tees);
 
 </script>
+
+<script src="../footer.js"></script>
