--- a/All Home Pages/boys.html
+++ b/All Home Pages/boys.html
@@ -7,6 +7,7 @@
     <title>Boys</title>
     <link rel="stylesheet" href="../landingPageStyles.css">
     <link rel="stylesheet" href="moving-img.css">
+    <link rel="stylesheet" href="../footer.css">
 </head>
 <body>
     <!-- <div id="container">
@@ -193,7 +194,13 @@
     <div class="connect shopping-list gifting-zone">
         <p>Connect With Us</p>
         <img src="https://lmsin.net/cdn-cgi/image/w=1232,q=60,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedAD8AF927.lmsin.net/MAX-Friday/MAX2.O/desktop-department-modularblock8-oneBythree-A-Women-21Oct2020.jpg" alt="">
-    </div>   
+    </div> 
+    
+    
+
+    <div id="Footer"></div>
+
+
 </body>
 </html>
 <script
@@ -201,3 +208,5 @@
       crossorigin="anonymous"
     ></script>
     <script src="moving-img.js"></script>
+
+    <script src="../footer.js"></script>
