--- a/Boys Section/boys_shirts.html
+++ b/Boys Section/boys_shirts.html
@@ -18,7 +18,21 @@
 </head>
 
 <body>
+  <div class="sort">
+    <div>
+      <p class="total-product"></p>
+    </div>
+    <div>
+      <span>Sort by</span>
+      <select id="sortNames" onchange="NameSort()">
+      <option value="rele">Relevence</option>
+      <option value="ascending">Alphabetical</option>
+      <option value="htl">High to Low</option>
+      <option value="lth">Low to High</option>
+      </select>
+    </div>
     
+  </div>  
     <div id="product_list"></div>
 
     <div id="Footer"></div>
@@ -33,6 +47,38 @@
 <script>
 
 displayData(boys_shirts);
+function NameSort() {
+      //console.log('inside name sort')
+      var selected = document.querySelector("#sortNames").value;
+      console.log(selected);
+
+      if (selected == "ascending") {
+        boys_shirts.sort(function (a, b) {
+          if (a.name > b.name) return 1;
+          if (a.name < b.name) return -1;
+          return 0;
+        });
+        displayData(boys_shirts);
+      }
+
+      if (selected == "htl") {
+        boys_shirts.sort(function (a, b) {
+          return b.price - a.price;
+        });
+        displayData(boys_shirts);
+      }
+
+      if (selected == "lth") {
+        boys_shirts.sort(function (a, b) {
+          return a.price - b.price;
+        });
+        displayData(boys_shirts);
+      }
+
+      if(selected == "rele"){
+        displayData(boys_shirts)
+      }
+  }
 
 </script>
 
