--- a/Sorting Navigation/Girl_nav_sort.html
+++ b/Sorting Navigation/Girl_nav_sort.html
@@ -118,12 +118,11 @@
         </select>
         <select>
             <option ><p >Size</p></option>
-            <option value="">1</option>
-            <option value="">2</option>
-            <option value="">3</option>
-            <option value="">4</option>
-            <option value="">5</option>
-            <option value="">6</option>
+            <option value="">1-2 Yr</option>
+            <option value="">2-4 Yr</option>
+            <option value="">4-6 Yr</option>
+            <option value="">6-9 Yr</option>
+            <option value="">9-12 Yr</option>
         </select>
         <select>
             <option><p >Color</p></option>
