--- a/Sorting Navigation/HOME_Navigation.HTML
+++ b/Sorting Navigation/HOME_Navigation.HTML
@@ -96,12 +96,12 @@
         </select>
         <select>
             <option ><p >Size</p></option>
-            <option value="">1</option>
-            <option value="">2</option>
-            <option value="">3</option>
-            <option value="">4</option>
-            <option value="">5</option>
-            <option value="">6</option>
+            <option value="">S</option>
+            <option value="">M</option>
+            <option value="">L</option>
+            <option value="">XL</option>
+            <option value="">XXL</option>
+            <option value="">XXXL</option>
         </select>
         <select>
             <option><p >Color</p></option>
