--- a/Sorting Navigation/HOME_Navigation.HTML
+++ b/Sorting Navigation/HOME_Navigation.HTML
@@ -64,6 +64,7 @@
             width:192px;height:38.5px;
             margin-top: 19px;
             margin-left:32px;
+            border:none
 
         }
        
@@ -77,6 +78,7 @@
         <div><a href="women_nav_sort.html"><p>Women</p></a></div>
         <div style="width:60px"><a href="men_nav_sort.html"><p>Men</p></a></div>
         <div style="width:60px"><a href="Girl_nav_sort.html"><p>Girl</p></a></div>
+        <div style="width:60px"><a href="boy_nav_sort.html"><p>Boy</p></a></div>
     </div>
     <div id="input">
         <select>
@@ -96,12 +98,12 @@
         </select>
         <select>
             <option ><p >Size</p></option>
-            <option value="">S</option>
-            <option value="">M</option>
-            <option value="">L</option>
-            <option value="">XL</option>
-            <option value="">XXL</option>
-            <option value="">XXXL</option>
+            <option value="">1</option>
+            <option value="">2</option>
+            <option value="">3</option>
+            <option value="">4</option>
+            <option value="">5</option>
+            <option value="">6</option>
         </select>
         <select>
             <option><p >Color</p></option>
