--- a/Sorting Navigation/women_nav_sort.html
+++ b/Sorting Navigation/women_nav_sort.html
@@ -63,6 +63,7 @@
             width:192px;height:38.5px;
             margin-top: 19px;
             margin-left:32px;
+            border:none
 
         }
     #first>div{
@@ -218,12 +219,12 @@
         </select>
         <select>
             <option ><p >Size</p></option>
-            <option value="">S</option>
-            <option value="">M</option>
-            <option value="">L</option>
-            <option value="">XL</option>
-            <option value="">XXL</option>
-            <option value="">XXXL</option>
+            <option value="">1</option>
+            <option value="">2</option>
+            <option value="">3</option>
+            <option value="">4</option>
+            <option value="">5</option>
+            <option value="">6</option>
         </select>
         <select>
             <option><p >Color</p></option>
