--- a/men_winter.html
+++ b/men_winter.html
@@ -18,21 +18,22 @@
 </head>
 
 <body>
-  <div class="sort">
-    <div>
-      <p class="total-product"></p>
-    </div>
-    <div>
-      <span>Sort by</span>
-      <select id="sortNames" onchange="NameSort()">
-      <option value="rele">Relevence</option>
-      <option value="ascending">Alphabetical</option>
-      <option value="htl">High to Low</option>
-      <option value="lth">Low to High</option>
-      </select>
-    </div>
+    <div class="sort">
+        <div>
+          <p class="total-product"></p>
+        </div>
+        <div>
+          <span>Sort by</span>
+          <select id="sortNames" onchange="NameSort()">
+          <option value="rele">Relevence</option>
+          <option value="ascending">Alphabetical</option>
+          <option value="htl">High to Low</option>
+          <option value="lth">Low to High</option>
+          </select>
+        </div>
+        
+      </div>  
     
-  </div>  
     <div id="product_list"></div>
 
     <div id="Footer"></div>
@@ -48,37 +49,37 @@
 
 <script>
 
-displayData(mensTshirt);
+displayData(men_winterwear);
 function NameSort() {
       //console.log('inside name sort')
       var selected = document.querySelector("#sortNames").value;
       console.log(selected);
 
       if (selected == "ascending") {
-        mensTshirt.sort(function (a, b) {
+        men_winterwear.sort(function (a, b) {
           if (a.name > b.name) return 1;
           if (a.name < b.name) return -1;
           return 0;
         });
-        displayData(mensTshirt);
+        displayData(men_winterwear);
       }
 
       if (selected == "htl") {
-        mensTshirt.sort(function (a, b) {
+        men_winterwear.sort(function (a, b) {
           return b.price - a.price;
         });
-        displayData(mensTshirt);
+        displayData(men_winterwear);
       }
 
       if (selected == "lth") {
-        mensTshirt.sort(function (a, b) {
+        men_winterwear.sort(function (a, b) {
           return a.price - b.price;
         });
-        displayData(mensTshirt);
+        displayData(men_winterwear);
       }
 
       if(selected == "rele"){
-        displayData(mensTshirt)
+        displayData(men_winterwear)
       }
   }
 
