--- a/All Home Pages/mens.html
+++ b/All Home Pages/mens.html
@@ -279,7 +279,7 @@
         }
         document.querySelector("#img9").addEventListener("click",clickfn9)
         function clickfn9(){
-            window.location.href="../Mens Section/men_sleepwear.html"
+            window.location.href="../Mens Section/men_loungwear.html"
         }
         document.querySelector("#img10").addEventListener("click",clickfn10)
         function clickfn10(){
