added new image

--- a/All Home Pages/Girls.html
+++ b/All Home Pages/Girls.html
@@ -95,9 +95,17 @@
         <span class="dot"></span>
     </div>
     
-    <div class="img2">
+    <div class="shopping-list">
+        <p>Style Spotlite</p>
+    <div class="dress-img">
         <img src="https://lmsin.net/cdn-cgi/image/w=1232,q=60,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedAD8AF927.lmsin.net/MAX-Friday/MAX2.O/department-modularblock-oneBythree-C-Common-28Mar2022.jpg" alt="">   
     </div>
+    </div>
+    <hr id="name">
+    <br>
+    <br>
+
+
     <div class="Top-collection shopping-list">
         <p>Top Collection</p>
         <div class="dress-img">
