--- a/All Home Pages/index.html
+++ b/All Home Pages/index.html
@@ -93,10 +93,16 @@
         <span class="dot"></span> 
         <span class="dot"></span>
     </div>
-
-    <div class="img2">
+    <div class="shopping-list">
+        <p>Style Spotlite</p>
+    <div class="dress-img">
         <img src="https://lmsin.net/cdn-cgi/image/w=1232,q=60,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedAD8AF927.lmsin.net/MAX-Friday/MAX2.O/department-modularblock-oneBythree-C-Common-28Mar2022.jpg" alt="">   
     </div>
+    </div>
+    <hr id="name">
+    <br>
+    <br>
+    
     <div class="shopping-list">
         <p>Shop By Category</p>
         <div class="categories">
