--- a/All Home Pages/mens.html
+++ b/All Home Pages/mens.html
@@ -99,7 +99,8 @@
     </div>
 
     <div class="img2">
-        <img src="https://lmsin.net/cdn-cgi/image/w=1232,q=60,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedAD8AF927.lmsin.net/MAX-Friday/MAX2.O/department-modularblock-oneBythree-C-Common-28Mar2022.jpg" alt="">   
+        <p>Style Spotlight</p>
+        <img src="https://lmsin.net/cdn-cgi/image/w=1232,q=60,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedAD8AF927.lmsin.net/MAX-Friday/MAX2.O/department-modularblock-oneBythree-C-Men-01APR2022.jpg" alt="">
     </div>
     <div class="Top-collection shopping-list">
         <p>Top Collection</p>
