--- a/Womens Section/bottom.html
+++ b/Womens Section/bottom.html
@@ -23,10 +23,10 @@
   <p style="margin-left:100px">You searched for</p>
     <div id="first">
         <div  style="width:120px ; color:#929391; border:none ; margin-left:-20px"><p style="font-size:16px">Shop For</p></div>
-        <div><a href="women_nav_sort.html"><p>Women</p></a></div>
-        <div style="width:60px"><a href="men_nav_sort.html"><p>Men</p></a></div>
-        <div style="width:60px"><a href="Girl_nav_sort.html"><p>Girl</p></a></div>
-        <div style="width:60px"><a href="boy_nav_sort.html"><p>Boy</p></a></div>
+        <div><a href="../Sorting Navigation/women_nav_sort.html"><p>Women</p></a></div>
+        <div style="width:60px"><a href="../Sorting Navigation/men_nav_sort.html"><p>Men</p></a></div>
+        <div style="width:60px"><a href="../Sorting Navigation/Girl_nav_sort.html"><p>Girl</p></a></div>
+        <div style="width:60px"><a href="../Sorting Navigation/boy_nav_sort.html"><p>Boy</p></a></div>
     </div>
     <div id="input">
       <div class="inner-box">
