--- a/All Home Pages/index.html
+++ b/All Home Pages/index.html
@@ -99,7 +99,10 @@
         <p>Style Spotlight</p>
         <img src="https://lmsin.net/cdn-cgi/image/w=1232,q=60,fit=cover/https://70415bb9924dca896de0-34a37044c62e41b40b39fcedAD8AF927.lmsin.net/MAX-Friday/MAX2.O/department-modularblock-oneBythree-C-Women-01APR2022.jpg" alt="">
     </div>
-    <br>
+    <hr id="name">
+    <br><br>
+
+    
     
     <div class="shopping-list">
         <p>Shop By Category</p>
