--- a/Navbar.html
+++ b/Navbar.html
@@ -134,14 +134,14 @@
             </ul>
         </div>
         <div id="Search_bar">
-            <form>
-                <input type="submit" value="search">
-            </form>
+                <div id="Search_img"><i class="fa-solid fa-magnifying-glass"></i></div>
+                <input type="text" id="Search" placeholder="What are you looking for?">
         </div>
 
         <div id="Sign-up">
-            <div style="border-right: 1px solid rgb(203, 193, 193);"><p style="margin:14px 24px;">Sign Up - Sign In</p></div>
-            <div><p style="margin:14px 24px">Basket</p></div>
+            <div><p style="margin:14px 16px;">Sign Up - Sign In</p></div>
+            <div></div>
+            <div style="display:flex; align-items: center;"><p style="margin:14px 18px">Basket</p><i class="fa-solid fa-bag-shopping" style="font-size: 25px; margin-bottom:6px;"></i></div>
         </div>
 
     </div>
